samples/_failures_safe/1761499290_cae0ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_282336e9.c: In function ‘matrix_read’:
./samples/SAFE/__tmp_282336e9.c:132:13: error: expected declaration or statement at end of input
  132 |             mat->data[i][j] = val;
      |             ^~~
./samples/SAFE/__tmp_282336e9.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_282336e9.c:132:13: error: expected declaration or statement at end of input
